# english2hindi

./: .gitignore  README.md  pyproject.toml  setup.sh
notebooks/: Researching_transformer.ipynb  data_exploration.ipynb  datasey-tinker.ipynb  demo_tokenizer.json  mini_transformer.ipynb  new_tokenizer.json  tokeniser.ipynb  tokeniser.json  transformer.ipynb
src/: data.py  dataloader.py  tokeniser.py  utils.py
testing/: iitbdataloader_test.py  pre_embedding_pipeline_testing.py
